fix overflow

--- a/src/assets/css/Index.css
+++ b/src/assets/css/Index.css
@@ -18,6 +18,7 @@ body {
     align-items: center;
     justify-content: center;
     padding: 0rem 2rem 2rem 2rem;
+    overflow-x: hidden;
 }
 
 .container {
